--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
             "program": "${fileDirname}",
             "env": {
                 "AUTH_DOMAIN": "ecovo.auth0.com",
+                "AUTH_CREDENTIALS": "aGFyb2xkOmhpZGV0aGVwNGlu",
                 "DB_HOST": "cluster0-shard-00-00-tgosy.mongodb.net:27017,cluster0-shard-00-01-tgosy.mongodb.net:27017,cluster0-shard-00-02-tgosy.mongodb.net:27017/test?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin&retryWrites=true",
                 "DB_USERNAME": "ecovo_rw",
                 "DB_PASSWORD": "q4GVRkQmPDwOVADz",
